# deccoeff

./: CHANGES  Makefile  README  TODO  _decimal.c  config.h.in  configure  configure.ac  deccoeff.c  deccoeff.txt  deccoeff_config.h.in  decimal.py  limb.c  limb.h  profile.py  run.py  setup.py  sqrt.py  test_deccoeff.py
kmul_analyze/: analysis.py  workspace.py
telco/: telco.py  telco.testb
